/*
 * AI Interview Platform - Backend Application
 * Spring Boot 4.1 + Java 25 + Spring AI 2.0 + PostgreSQL + pgvector + RustFS + Redis
 */

plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = 'com.quantmore'
version = '0.0.1-SNAPSHOT'

repositories {
    maven { url = uri('https://maven.aliyun.com/repository/public/') }
    maven { url = uri('https://maven.aliyun.com/repository/spring/') }
    maven { url = uri('https://maven.aliyun.com/repository/gradle-plugin/') }
    mavenCentral()
    maven { url = uri('https://repo.spring.io/milestone') }
}

dependencies {
    // Spring Boot Starters (Boot 4 modular design)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'

    // H2 Database for testing
    testRuntimeOnly 'com.h2database:h2'

    // Spring AI 2.0 - OpenAI兼容模式 (阿里云DashScope)
    implementation "org.springframework.ai:spring-ai-starter-model-openai:${libs.versions.springAi.get()}"
    // Spring AI 2.0 - PostgreSQL Vector Store (pgvector)
    implementation "org.springframework.ai:spring-ai-starter-vector-store-pgvector:${libs.versions.springAi.get()}"

    // Apache Tika for document parsing (PDF, DOCX, TXT)
    implementation libs.tika.core
    implementation libs.tika.parsers

    // AWS S3 SDK for RustFS storage
    implementation "software.amazon.awssdk:s3:${libs.versions.aws.sdk.get()}"

    // Pinyin4j - 汉字转拼音
    implementation libs.pinyin4j

    // JWT - jjwt 0.12.x
    implementation libs.jjwt.api
    runtimeOnly libs.jjwt.impl
    runtimeOnly libs.jjwt.jackson

    // SpringDoc OpenAPI - Swagger接口文档
    implementation libs.springdoc

    // Redisson 4.0 - Redis客户端 (Boot 4 compatible)
    implementation "org.redisson:redisson-spring-boot-starter:${libs.versions.redisson.get()}"

    // Prometheus metrics endpoint for Actuator
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Jakarta annotation for Java 21+ (replaces javax.annotation)
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // Lombok
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    // MapStruct - 对象映射 (必须在Lombok之后配置)
    implementation "org.mapstruct:mapstruct:${libs.versions.mapstruct.get()}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${libs.versions.mapstruct.get()}"
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // Boot 4 模块化：MockMvc 测试切片移入独立 starter
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation libs.junit.jupiter
    testImplementation platform('org.testcontainers:testcontainers-bom:2.0.5')
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

// 全局UTF-8编码配置
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

// 将仓库根目录 .env 注入 bootRun，便于本地加载 AI_BAILIAN_API_KEY 等变量（Gradle 进程默认不读 .env）
// 同时确保 JVM 使用 UTF-8 编码
tasks.named('bootRun') {
    // JVM 编码配置（stdout/stderr：JDK 18+，避免控制台 PrintStream 与 Logback UTF-8 不一致）
    jvmArgs = [
            '-Dfile.encoding=UTF-8',
            '-Dconsole.encoding=UTF-8',
            '-Dstdout.encoding=UTF-8',
            '-Dstderr.encoding=UTF-8',
            '--enable-native-access=ALL-UNNAMED'
    ]

    // 加载 .env 文件
    def envFile = rootProject.file('.env')
    if (envFile.exists()) {
        envFile.eachLine { line ->
            def trimmed = line.trim()
            if (trimmed.isEmpty() || trimmed.startsWith('#')) {
                return
            }
            def eq = trimmed.indexOf('=')
            if (eq <= 0) {
                return
            }
            def key = trimmed.substring(0, eq).trim()
            def val = trimmed.substring(eq + 1).trim()
            if ((val.startsWith('"') && val.endsWith('"')) || (val.startsWith("'") && val.endsWith("'"))) {
                val = val.substring(1, val.length() - 1)
            }
            environment key, val
        }
    }
}
